[package]
name = "hyper-socks-async"
version = "0.1.0"
authors = ["Vesa Vilhonen <vesa@vilhonen.com>"]
license = "MIT"
description = "Socks V5 connector with TLS support for async hyper (>= 0.11)"
repository = "https://github.com/vvilhonen/hyper-socks-async"
readme = "README.md"

[dependencies]
futures = "0.1"
byteorder = "1.1"
hyper = "0.11"
hyper-tls = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
native-tls = "0.1"
tokio-tls = "0.1"
